# bfs-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_CN.md  bfs-rs.linux-x64-gnu.node  bfs-rs.wasi-browser.js  bfs-rs.wasi.cjs  bfs.test.mjs  bfs.test.ts  browser.js  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
src/: lib.rs
