
[package]
authors = ["xingwangzhe"]
edition = "2021"
name = "bfs-rs"
version = "0.1.7"
description = "Rust BFS on compressed adjacency list with Rayon parallelism"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
